Revire to get access to the config
